--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
             "email": "127138253+Johanlex20@users.noreply.github.com"
         }
     ],
-    "require": {},
+    "require": {
+        "intervention/image": "^2.7"
+    },
     "autoload":{
         "psr-4": {
             "App\\" : "./classes"
